Remove color code from header name

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="hero-flex">
         <img src="profile.png" alt="My Profile" class="profile-img">
         <div class="hero-text">
-            <h1>LOVELYN#ff352a GENOVANIA</h1>
+            <h1>LOVELYN GENOVANIA</h1>
             <p>1st Year BSIT Student</p>
             <p>Laguna State Polytechnic University</p>
             
